Fixed alignment for close button in form data editor

--- a/chrome/css/styles.scss
+++ b/chrome/css/styles.scss
@@ -1145,6 +1145,11 @@ input[type="file"] {
         border-radius: 5px;
     }
 }
+
+#formdata-keyvaleditor .keyvalueeditor-delete img {
+    margin-top: 5px;
+    vertical-align: top;
+}
 /* End request */
 
 /*Response*/
